product_docs/docs/edb-postgres-ai/1.4/hybrid-manager/using_hybrid_manager/monitoring/monitoring_grafana/grafana_dashboards/kubernetes_dashboards.mdx
---
title: Kubernetes dashboards
navTitle: Kubernetes dashboards
description: Learn how to monitor Kubernetes using dashboards with Hybrid Manager.
---

These dashboards provide insights into the health and performance of the underlying Kubernetes infrastructure that powers Hybrid Manager (HM). 

These are prebuilt dashboards called [Kubernetes mixins](https://github.com/kubernetes-monitoring/kubernetes-mixin) from Grafana's official library.

## Kubernetes / API server

!!!note

    This dashboard displays data only for on-premises HM deployments, as Grafana requires node-level access to the API server.

**Description:** Monitors the performance and availability of the Kubernetes API server, a critical component for all interactions with the cluster. 

**Metrics** These metrics include read and write availability, work queue latency, read and write errors, resource utilization, among others.

**Usage:** Use this to identify API latency issues or availability problems.

## Kubernetes / Compute resources \*

![Compute Resources by Node and Pods](../../../../images/k8s_compute_dashboard.png)

Compute resources are displayed in multiple dashboards that provide different views: **Cluster** , **Namespace (Pods)**, **Namespace (Workloads)**, **Node (Pods)**, **Pod**, or **Workload**.

-   **Cluster** displays resource utilization for the entire Kubernetes cluster, as well as utilization per namespace. 

-   **Namespace (Pods)** displays resource utilization that you can filter by Kubernetes namespaces, focusing on pod/service consumption.

-   **Namespace (Workloads)** displays resource utilization that you can filter by Kubernetes namespaces and by workload type (deployments, daemonsets, StatefulSets, and so on), focusing on individual workload consumption.

-   **Node (Pods)** shows resource utilization that you can filter by individual Kubernetes nodes, broken down by the pods running on them. 

-   **Pod** provides detailed resource usage for individual Kubernetes pods in a specific namespace. 

-   **Workload** shows detailed resource usage for a specific Kubernetes workload (for example, a deployment workload) in a specific namespace. 

**Description:** Shows the resource utilization at the Kubernetes cluster level. Each of the subdashboards presents the data differently, focusing on different Kubernetes levels and offering different filtering options.

**Metrics:** Metrics include CPU, memory, bandwidth, packet rates, IOPS, throughput, and more.

**Usage:** Use these dashboards to:

- Understand the resource consumption across all workloads
- Identify resource-intensive applications or teams
- Understand the resource footprint of specific workloads in an application and of specific pods in a node
- Troubleshoot performance issues with specific application instances
- Monitor the performance of a particular application component

## Kubernetes / Kubelet

![Kubelet dashboard](../../../../images/k8s_kubelet_dashboard.png)

**Description:**  Monitors the health and performance of the [Kubelet](https://kubernetes.io/docs/reference/command-line-tools-reference/kubelet/) service running on each Kubernetes node, responsible for managing containers. You can see the aggregated performance of all kubelets, filter by kubelet instance and drill down into specific kubelet operations.

**Metrics:** Metrics include kubelet count, pods count, containers count, operation rates, operations durations, pod lifecycle operation rates, operation error rates, and more.

**Usage:** Use this to identify node-level agent activity, operation behavior, and latency and troubleshoot performance issues on a particular node.

## Kubernetes / Networking \*

![Networking overall cluster dashboard](../../../../images/k8s_networking_cluster_dashboard.png)

Networking resources are displayed in multiple dashboards that provide different views: **Cluster** , **Namespace (Pods)**, **Namespace (Workloads)**, **Pod**, or **Workload**.

-   **Cluster** displays network utilization for the entire Kubernetes cluster, as well as per namespace.

-   **Namespace (Pods)** shows network traffic metrics that you can filter by Kubernetes namespaces, focusing on the pods in that namespace. 

-   **Namespace (Workloads)** shows network traffic metrics that you can filter by Kubernetes namespaces and by workload type (deployments, daemonsets, StatefulSets, and so on), focusing on individual workload traffic.

-   **Pod** provides detailed network traffic metrics for individual Kubernetes pods in a specific namespace.

-   **Workload** shows detailed network traffic metrics for a specific Kubernetes workload (for example, a deployment workload).

**Description:** Shows the network usage at the Kubernetes cluster level. Each of the subdashboards presents the data differently, focusing on different Kubernetes levels and offering different filtering options.

**Metrics:** Metrics include rates of bytes received and transmitted, rates of packets received and transmitted, receive and transmit bandwidth, and more.

**Usage:** Use these dashboards to:
-  Understand overall network communication patterns, traffic, throughput, and potential bottlenecks
-  Analyze network patterns for specific applications
-  Understand the resource footprint of specific workloads in an application
-  Troubleshoot network connectivity issues with specific pods in an application
-  Monitor the network performance of a particular application component

## Kubernetes / Persistent Volumes

![Persistent Volumes dashboard](../../../../images/k8s_persistentvolumes_dashboard.png)

**Description:** Monitors the usage and performance of persistent volumes ([PVs](https://kubernetes.io/docs/concepts/storage/persistent-volumes/)) in the Kubernetes cluster. You can filter the results per namespace and persistent volume claim ([PVCs](https://kubernetes.io/docs/concepts/storage/persistent-volumes/)).

**Metrics:** Metrics include free and used space.

**Usage:** Use this to identify storage bottlenecks and capacity issues, plan for storage expansions, and monitor storage costs.

## Kubernetes / StatefulSets

![StatefulSets dashboard](../../../../images/k8s_stateful_dashboard.png)

**Description:** Provides specific monitoring for Kubernetes [StatefulSets](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/), which manage stateful applications. You can filter results by namespace (=application) and StatefulSet name.

**Metrics:** Metrics include CPU, memory, and network consumption, as well as replicas.

**Usage:** Use this to monitor the stability, performance, and resource consumption of your stateful applications and track whether your stateful applications have met their desired replicas.

## Kubernetes CoreDNS

![CoreDNS dashboard](../../../../images/k8s_coreDNS_dashboard.png)

**Description:** Monitors the performance and health of the CoreDNS service, which provides DNS resolution in the Kubernetes cluster, enabling communication within the pods and services.

**Metrics:** The metrics include DNS request rates by protocol, query type, DNS zone, size, response code, response duration, response size, and others.

**Usage** Use this to monitor the reliability and efficiency of the CoreDNS component and identify any discovery and communication issues among services.

## Kubernetes Events

![Postgres Kubernetes Events dashboard](../../../../images/postgres_k8s_events_dashboard.png)

**Description:** Displays Kubernetes events related to your Postgres pods and deployments. It displays events of the last hour. Therefore, it's possible that no events are shown for the specified namespace, for example, if workloads are running smoothly and no Kubernetes events are required to restore a pod.

**Metrics:** Type of event (for example, pod creation, deletion, error) in YAML format.

**Usage:** Provides context into Kubernetes operations that might be impacting your Postgres instances. Useful for diagnosing failed deployments, pod restarts, or other Kubernetes-level issues affecting database availability.
